--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>KuairePhoto</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
-    <img src="ex.png" alt="un exemple"
+    <img src="PXL_20250803_000528334.jpg" alt="un exemple"
   </head>
   <body>
     <h1>Bienvenue sur KuairePhoto 📷</h1>
