--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>KuairePhoto</title>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
-    <img src="PXL_20250803_000528334.jpg" alt="un exemple"
-  </head>
-  <body>
-    <h1>Bienvenue sur KuairePhoto 📷</h1>
-    <p>Ton QR-code magique, ton image, ton style !</p>
-  </body>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>KuairePhoto 📷</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>KuaireImg #001</h1>
+  <img src="PXL_20250803_000528334.jpg" alt="Un chat en KuaireImg">
+  <p>Ta première photo générée par KuairePhoto !</p>
+</body>
 </html>
